changed order of projects and small fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ ul {
     position: absolute
 }
 
+#portfolioWerk {
+    display: flex;
+    flex-flow: wrap;
+}
+
 .BG-letters {
     position: absolute;
     margin: 0;
